--- a/public/styles/shop.css
+++ b/public/styles/shop.css
@@ -7,10 +7,11 @@
 .header {
   width: 100%;
   background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
-  height: 80px;
+  height: 30px;
 }
 
 .header h4 {
+  padding: 6px;
   text-align: center;
   color: whitesmoke;
 }
@@ -42,7 +43,7 @@ body {
   height: 100vh;
   display: flex;
   justify-content: start;
-  align-items: center;
+  align-items: flex-start;
  }
 
  .Cart-Container{
