again rename index.js file

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,8 +3,5 @@
     </div>
 
 <div class="content">
-    <div class="Cart-Container" id="cnt">
-        {{!-- Product carts --}}
-    </div>
-
+    <div class="Cart-Container" id="cnt"> </div>
 </div>  
