--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,12 +11,12 @@
     type="text/css"/>
    
     <title>it-inc-lesson2</title>
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/shop.css">
+    <link rel="stylesheet" href="styles/normalize.css"> 
+    <link rel="stylesheet" href="styles/shop.css"> 
 </head>
  
 <body>
     {{{body}}}
-<script src="appIndex.js"></script>   
+<script src="app.js"></script>   
 </body>
 </html>
