--- a/views/layouts/main1.handlebars
+++ b/views/layouts/main1.handlebars
@@ -12,11 +12,11 @@
    
     <title>it-inc-lesson2</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shop.css"> 
+    <link rel="stylesheet" href="styles/shop1.css"> 
 </head>
  
 <body>
     {{{body}}}
-<script src="app.js"></script>   
+<script src="app1.js"></script>   
 </body>
 </html>
