--- a/views/layouts/main1.handlebars
+++ b/views/layouts/main1.handlebars
@@ -13,11 +13,17 @@
     <title>it-inc-lesson2</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
     <link rel="stylesheet" href="styles/shop1.css"> 
-    
+    <script src="app1.js"></script>
 </head>
- <script src="app1.js"></script>
+ 
 <body>
     {{{body}}}
+    <script>
+        window.onload = createTable();
+        
+   
+    </script>
+   
    
 </body>
 </html>
