--- a/views/layouts/main1.handlebars
+++ b/views/layouts/main1.handlebars
@@ -21,7 +21,7 @@
     <script>
     async function getDataPage() {
         console.log('-axios-');
-        const data = await axios.post('/assort');
+        const data = await axios.post('https://web-app-bot-five.vercel.app/assort');
         console.log('after');
         const alls = data.data;
         if (Object.keys(alls).length === 2 ) {
