--- a/views/layouts/main1.handlebars
+++ b/views/layouts/main1.handlebars
@@ -14,12 +14,12 @@
    
     <title>it-inc-lesson2</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shop_1212.css"> 
+    <link rel="stylesheet" href="styles/shop1.css"> 
     
 </head>
  
 <body>
     {{{body}}}
-    <script src="app.js"></script>
+    <script src="app1.js"></script>
 </body>
 </html>
