--- a/views/index1.handlebars
+++ b/views/index1.handlebars
@@ -6,7 +6,7 @@
   <ul>
     <li><a href="#tabs-1">Соритровка</a></li>
     <li><a href="#tabs-2">Поиск</a></li>
-    <li><a href="#tabs-3">Заказать</a></li>
+    <li ><a class="like" href="#tabs-3">Заказать</a></li>
   </ul>
   <div id="tabs-1">
     <p>Сортировка</p>
