--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
 
 <div id="tabs" class="settings-widget">
   <ul>
-    <li><a href="#tabs-1">Соритровка</a></li>
+    <li><a href="#tabs-1">Сортировка</a></li>
     <li><a href="#tabs-2">Поиск</a></li>
     <li ><a class="like" href="#tabs-3">Заказать</a></li>
   </ul>
