--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
    
     <title>it-inc-lesson2</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shop1.css"> 
+    <link rel="stylesheet" href="styles/shop.css"> 
     
 </head>
  
