--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,15 +4,15 @@
 
 <div id="tabs" class="settings-widget">
   <ul>
-    <li><a href="#tabs-1">Сортировка</a></li>
-    <li><a href="#tabs-2">Поиск</a></li>
+    <li><a href="#tabs-1">Категории</a></li>
+    <li><a href="#tabs-2">Поиск/Сортировка</a></li>
     <li ><a class="like" href="#tabs-3">Заказать</a></li>
   </ul>
   <div id="tabs-1">
-    <p>Сортировка</p>
+    <p>Категории</p>
   </div>
   <div id="tabs-2">
-    <p>Поиск</p>
+    <p>Поиск/Сортировка</p>
   </div>
   <div id="tabs-3">
     <p>Заказать</p>
