--- a/public/styles/shop.css
+++ b/public/styles/shop.css
@@ -148,9 +148,23 @@ body {
   color: #0ba360;
   font-size: 1.1em;
  }
+ 
+ .resp-category {
+  display: block;
+  margin: 3px 0;
+ }
 
+ .resp-category button {
+  width: 100%;
+  box-shadow: 0 0 3px rgba(0,0,0,0.4); 
+  padding: 6px 10px;
+  font-size: 0.7em;
+  font-weight: bold;
+  color: #505050;
+ }
 
  .settings-widget {
+  width: 100%;
   position: fixed;
   top: 0;
  } 
