--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,12 +15,12 @@
    
     <title>it-inc-lesson2</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shop111.css"> 
+    <link rel="stylesheet" href="styles/shop.css"> 
     
 </head>
  
 <body>
     {{{body}}}
-    <script src="app12.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
