--- a/views/layouts/main4.handlebars
+++ b/views/layouts/main4.handlebars
@@ -15,12 +15,12 @@
    
     <title>it-inc-lesson2</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shop.css"> 
+    <link rel="stylesheet" href="styles/shop4.css"> 
     
 </head>
  
 <body>
     {{{body}}}
-    <script src="app.js"></script>
+    <script src="app4.js"></script>
 </body>
 </html>
