--- a/public/styles/shop5.css
+++ b/public/styles/shop5.css
@@ -148,7 +148,11 @@ body {
   color: #0ba360;
   font-size: 1.1em;
  }
- 
+
+ #tabs a {
+   font-size: 0.9em;
+  }
+
  .resp-category {
   display: block;
   margin: 3px 0;
@@ -158,7 +162,7 @@ body {
   width: 100%;
   box-shadow: 0 0 3px rgba(0,0,0,0.4); 
   padding: 6px 10px;
-  font-size: 0.7em;
+  font-size: 0.8em;
   font-weight: bold;
   color: #505050;
  }
@@ -167,6 +171,8 @@ body {
   width: 100%;
   position: fixed;
   top: 0;
+  max-height: 600px;
+  overflow-y: auto;
  } 
 
  .like {
