--- a/views/index5.handlebars
+++ b/views/index5.handlebars
@@ -5,7 +5,7 @@
 <div id="tabs" class="settings-widget">
   <ul>
     <li><a href="#tabs-1">Категории</a></li>
-    <li><a href="#tabs-2">Поиск/Сортировка</a></li>
+    <li><a href="#tabs-2">Сортировка</a></li>
     <li ><a class="like" href="#tabs-3">Заказать</a></li>
   </ul>
   <div id="tabs-1">
