--- a/views/index7.handlebars
+++ b/views/index7.handlebars
@@ -5,15 +5,13 @@
 <div id="tabs" class="settings-widget">
   <ul>
     <li><a href="#tabs-1">Категории</a></li>
-    <li><a href="#tabs-2">Сортировка</a></li>
-    <li ><a class="like" href="#tabs-3">Заказать</a></li>
+    <li ><a class="like" href="#tabs-3">Перейти к оформлению</a></li>
   </ul>
   <div id="tabs-1">
     <p>Категории</p>
+    <div id="set-cats"></div>
   </div>
-  <div id="tabs-2">
-    <p>Поиск/Сортировка</p>
-  </div>
+  
   <div id="tabs-3">
     <p>Заказать</p>
   </div>
