--- a/public/styles/shop.css
+++ b/public/styles/shop.css
@@ -150,7 +150,8 @@ body {
  }
 
  #tabs a {
-   font-size: 0.9em;
+   font-size: 1em;
+   text-align: center;
   }
 
  .resp-category {
@@ -173,7 +174,13 @@ body {
   top: 0;
  } 
 
+ .settings-widget li {
+  height: 50px;
+ }
  .like {
   background-image: linear-gradient(to top, #e6b980 0%, #eacda3 100%);
+  height: 35px;
   color: #f7f7f7;
  }
+
+ 
