--- a/views/layouts/main7.handlebars
+++ b/views/layouts/main7.handlebars
@@ -3,24 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
     
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+     
     <link
     href="https://fonts.googleapis.com/css?family=Roboto:400,300,700&subset=latin,Cyrillic"
     rel="stylesheet"
     type="text/css"/>
    
-    <title>it-inc-lesson2</title>
+    <title>webAppbot</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shop7.css"> 
+    <link rel="stylesheet" href="styles/shop.css"> 
     
 </head>
  
 <body>
     {{{body}}}
-    <script src="app7.js"></script>
+    <script src="distribute/app.js"></script>
 </body>
 </html>
