--- a/views/layouts/main111.handlebars
+++ b/views/layouts/main111.handlebars
@@ -13,12 +13,12 @@
    
     <title>webAppbot</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shop1.css"> 
+    <link rel="stylesheet" href="styles/shop111.css"> 
     
 </head>
  
 <body>
     {{{body}}}
-    <script src="distribute/app1.js"></script>
+    <script src="distribute/app.js"></script>
 </body>
 </html>
