--- a/views/layouts/mainA.handlebars
+++ b/views/layouts/mainA.handlebars
@@ -19,6 +19,6 @@
  
 <body>
     {{{body}}}
-    <script src="distribute/app.js"></script>
+    <script src="distribute/app12.js"></script>
 </body>
 </html>
