--- a/public/styles/shopA.css
+++ b/public/styles/shopA.css
@@ -54,14 +54,14 @@ body {
  .Header{
   margin: auto;
   width: 100%;
-  height: 15%;
+  height: 18%;
   display: flex;
   justify-content: space-around;
   align-items: center;
   background-image: linear-gradient(to top, #c4c5c7 0%, #dcdddf 52%, #ebebeb 100%);
  }
  .Heading{
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 700;
   color: #2F3841;
  }
@@ -152,7 +152,16 @@ body {
  #tabs a {
    font-size: 0.85em;
    text-align: center;
+   
   }
+
+ #count-basket {
+  padding: 0;
+  margin: 0;
+  font-weight: bold;
+  font-size: 1em;
+  color: #e44c77;
+ }
 
  .resp-category {
   display: block;
