--- a/views/indexB.handlebars
+++ b/views/indexB.handlebars
@@ -5,7 +5,7 @@
 <div id="tabs" class="settings-widget">
   <ul>
     <li><a href="#tabs-1">Категории</a></li>
-    <li ><a class="like" href="#tabs-3">Перейти к оформлению</a></li>
+    <li ><a class="like" href="#tabs-3">Перейти к оформлению<p id="count-basket">в корзине: 0</p></a></li>
   </ul>
   <div id="tabs-1">
     <p>Категории</p>
