add and remove product from shop cart

--- a/views/indexF.handlebars
+++ b/views/indexF.handlebars
@@ -8,12 +8,17 @@
     <li ><a class="like" href="#tabs-3">Перейти к оформлению<p id="count-basket">в корзине: 0</p></a></li>
   </ul>
   <div id="tabs-1">
+    <div id="tabs-1-cnt">
     <p>Категории</p>
     <div id="set-cats"></div>
+    </div>
   </div>
   
   <div id="tabs-3">
+    <div id="tabs-3-cnt">
     <p>Заказать</p>
+
+    </div>
   </div>
 </div>
 
