add and remove product d from shop cart...asdf

--- a/views/layouts/mainR.handlebars
+++ b/views/layouts/mainR.handlebars
@@ -13,12 +13,12 @@
    
     <title>webAppbot</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shopF.css"> 
+    <link rel="stylesheet" href="styles/shopR.css"> 
     
 </head>
  
 <body>
     {{{body}}}
-    <script src="distribute/appF.js"></script>
+    <script src="distribute/appR.js"></script>
 </body>
 </html>
