--- a/views/layouts/main99.handlebars
+++ b/views/layouts/main99.handlebars
@@ -13,12 +13,12 @@
    
     <title>webAppbot</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shop.css"> 
+    <link rel="stylesheet" href="styles/shop99.css"> 
     
 </head>
  
 <body>
     {{{body}}}
-    <script src="distribute/app.js"></script>
+    <script src="distribute/app99.js"></script>
 </body>
 </html>
