--- a/views/layouts/main99.handlebars
+++ b/views/layouts/main99.handlebars
@@ -19,6 +19,6 @@
  
 <body>
     {{{body}}}
-    <script src="distribute/appp.js"></script>
+    <script src="distribute/appq.js"></script>
 </body>
 </html>
