--- a/views/layouts/main99.handlebars
+++ b/views/layouts/main99.handlebars
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
      
     <link
@@ -19,6 +20,6 @@
  
 <body>
     {{{body}}}
-    <script src="distribute/appf.js"></script>
+    <script src="distribute/appy.js"></script>
 </body>
 </html>
