--- a/views/layouts/main99.handlebars
+++ b/views/layouts/main99.handlebars
@@ -20,6 +20,6 @@
  
 <body>
     {{{body}}}
-    <script src="distribute/app.js"></script>
+    <script src="distribute/appu.js"></script>
 </body>
 </html>
