--- a/views/index99.handlebars
+++ b/views/index99.handlebars
@@ -17,12 +17,12 @@
   <div id="tabs-3">
     <div id="tabs-3-cnt">
     <p>Заказать</p>
-
+    <button id="close">Выйти в телеграм</button>
     </div>
   </div>
 </div>
 
 <div class="content">
-  <button id="close">Close</button>
+  
     <div class="Cart-Container" id="cnt"> </div>
 </div>  
