--- a/views/index01.handlebars
+++ b/views/index01.handlebars
@@ -1,4 +1,6 @@
+
 <div class="header">
+<div id="loader"><img src="load.gif" alt=""><p>Загрузка...</p></div>
     <div class="info"><p id="usid"></p><h4>Ассортимент товаров</h4></div>
 </div>
 
