--- a/public/styles/shop99.css
+++ b/public/styles/shop99.css
@@ -35,6 +35,28 @@ body {
        0.3em 0.3em 1em rgba(0,0,0,0.3);
 }
 
+#loader {
+  width: 100%;
+  height: 500px;
+  position: relative;
+  background-color: rgb(22, 22, 22);
+  z-index: 1000;
+}
+
+#loader img {
+  position: absolute;
+  top: 50%;
+  left: 37%;
+  max-width: 25%;
+  max-height: 25%;
+}
+
+#loader p {
+  position: absolute;
+  top: 40%;
+  left: 43%;
+  color: whitesmoke;
+}
  
 
  .content {
