--- a/views/layouts/main01.handlebars
+++ b/views/layouts/main01.handlebars
@@ -20,6 +20,6 @@
  
 <body>
     {{{body}}}
-    <script src="distribute/appz.js"></script>
+    <script src="distribute/appk.js"></script>
 </body>
 </html>
