add find by characteristics front part application

--- a/views/layouts/mainX.handlebars
+++ b/views/layouts/mainX.handlebars
@@ -14,12 +14,12 @@
    
     <title>webAppbot</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shop991.css"> 
+    <link rel="stylesheet" href="styles/shopX.css"> 
     
 </head>
  
 <body>
     {{{body}}}
-    <script src="distribute/appk.js"></script>
+    <script src="distribute/appX.js"></script>
 </body>
 </html>
