--- a/public/styles/shopX.css
+++ b/public/styles/shopX.css
@@ -16,7 +16,13 @@
   color: whitesmoke;
 }
 
-
+/* d {
+ width: 20px;
+ height: 20px;
+ font-size: 0.8em;
+ font-weight: bold;
+ background-color: #f3f3f3;
+} */
 
 html {
   background-color: rgb(243, 243, 243);
@@ -129,6 +135,11 @@ body {
   color: #909090;
  }
 
+ .subtitle-chars {
+  font-size: 10px;
+  color: rgb(140, 119, 191);
+ }
+
  .counter{
   margin: 10px 0;
   width: 120px;
@@ -174,7 +185,10 @@ body {
  #tabs a {
    font-size: 0.85em;
    text-align: center;
-   
+  }
+
+  .ui-accordion .ui-accordion-content {
+    padding: 0.8em 1em;
   }
 
  #count-basket {
