--- a/views/indexX.handlebars
+++ b/views/indexX.handlebars
@@ -1,5 +1,6 @@
 
 <div class="header">
+  
 <div id="loader"><img src="load.gif" alt=""><p>Загрузка...</p></div>
     <div class="info"><p id="usid"></p><h4>Ассортимент товаров</h4></div>
 </div>
@@ -24,7 +25,7 @@
   </div>
 </div>
 
-<div class="content">
+<div id="content" class="content">
   
     <div class="Cart-Container" id="cnt"> </div>
 </div>  
