--- a/views/layouts/mainQ.handlebars
+++ b/views/layouts/mainQ.handlebars
@@ -14,12 +14,12 @@
    
     <title>webAppbot</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shopX.css"> 
+    <link rel="stylesheet" href="styles/shopQ.css"> 
     
 </head>
  
 <body>
     {{{body}}}
-    <script src="distribute/appX.js"></script> 
+    <script src="distribute/appQ.js"></script> 
 </body>
 </html>
