--- a/views/indexQ.handlebars
+++ b/views/indexQ.handlebars
@@ -7,13 +7,13 @@
 
 <div id="tabs" class="settings-widget">
   <ul>
-    <li><a href="#tabs-1">Категории</a></li>
-    <li ><a class="like" href="#tabs-3">Перейти к оформлению<p id="count-basket">в корзине: 0</p></a></li>
+    <li ><a class="li-a-cats" href="#tabs-1">Категории</a></li>
+    <li ><a class="like" href="#tabs-3">Перейти к оформлению<p id="count-basket">в корзине: 0</p><p id="total">всего товаров: </p></a></li>
   </ul>
   <div id="tabs-1">
     <div id="tabs-1-cnt">
     <p>Категории</p>
-    <div id="set-cats"></div>
+    <div class="set-cats" id="set-cats"></div>
     </div>
   </div>
   
