--- a/views/layouts/mainQ1.handlebars
+++ b/views/layouts/mainQ1.handlebars
@@ -14,12 +14,12 @@
    
     <title>webAppbot</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shopQ1.css"> 
+    <link rel="stylesheet" href="styles/shopRR.css"> 
     
 </head>
  
 <body>
     {{{body}}}
-    <script src="distribute/appQ1.js"></script> 
+    <script src="distribute/appRR.js"></script> 
 </body>
 </html>
