--- a/views/indexbbb.handlebars
+++ b/views/indexbbb.handlebars
@@ -7,11 +7,13 @@
 
 <div id="tabs" class="settings-widget">
   <ul>
-    <li ><a class="li-a-cats" href="#tabs-1">Категории</a></li>
-    <li ><a class="like" href="#tabs-3">Перейти к оформлению<p id="count-basket">в корзине: 0</p><p id="total">всего товаров: </p></a></li>
+    <li ><a class="li-a-cats" href="#tabs-1">Категории <p class="select-cats" id="select-cats"></p></a></li>
+    <li ><a class="like" href="#tabs-3">Перейти к оформлению<p id="count-basket">кол-во позиций: 0</p><p id="total">всего товаров: </p></a></li>
   </ul>
   <div id="tabs-1">
     <div id="tabs-1-cnt">
+    <p>Вы выбрали:</p>
+    <p class="list-cats" id="list-cats"></p>
     <p>Категории</p>
     <div class="set-cats" id="set-cats"></div>
     </div>
@@ -24,7 +26,14 @@
     </div>
   </div>
 </div>
+<div id="finded-characteristics" class="finded-characteristics">
 
+  {{!-- <div class="label-find-char">
+    <div id="title-find-char" class="title-find-char">жидкости </div>
+    <button id="remove-find-char" class="remove-find-char">x</button>
+  </div> --}}
+
+</div>
 <div id="content" class="content">
   
     <div class="Cart-Container" id="cnt"> </div>
