--- a/views/indexOI.handlebars
+++ b/views/indexOI.handlebars
@@ -7,12 +7,11 @@
 
 <div id="tabs" class="settings-widget">
   <ul>
-    <li ><a class="li-a-cats" href="#tabs-1">Категории <p class="select-cats" id="select-cats"></p></a></li>
+    <li ><a class="li-a-cats" href="#tabs-1">Категории <p class="select-cats" id="total-prods"></p></a></li>
     <li ><a class="like" href="#tabs-3">Перейти к оформлению<p id="count-basket">кол-во позиций: 0</p><p id="total">всего товаров: </p></a></li>
   </ul>
   <div id="tabs-1">
     <div id="tabs-1-cnt">
-    <p>Вы выбрали:</p>
     <p class="list-cats" id="list-cats"></p>
     <p>Категории</p>
     <div class="set-cats" id="set-cats"></div>
