--- a/views/layouts/mainOI.handlebars
+++ b/views/layouts/mainOI.handlebars
@@ -14,12 +14,12 @@
    
     <title>webAppbot</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shopbbb.css"> 
+    <link rel="stylesheet" href="styles/shopOI.css"> 
     
 </head>
  
 <body>
     {{{body}}}
-    <script src="distribute/appbbb.js"></script> 
+    <script src="distribute/appOI.js"></script> 
 </body>
 </html>
