--- a/public/styles/shopOI.css
+++ b/public/styles/shopOI.css
@@ -6,7 +6,7 @@
 
 .header {
   width: 100%;
-  height: 50px;
+  margin-bottom: 30px;
 }
 
 .header h4 {
@@ -123,9 +123,8 @@ body {
 .finded-characteristics {
   display: flex;
   flex-flow: row wrap;
-  background-color: #dddddd62;
   position: fixed;
-  margin-top: 20px;
+  
   min-height: 30px;
   width: 100%;
 }
@@ -139,7 +138,7 @@ body {
   border-radius: 10px;
   border: 1px solid rgb(110, 110, 110);
   align-items: center;
-  background-color: #c6c6c6;
+  background-color: rgb(229, 228, 228)
 }
 
 .title-find-char {
