--- a/views/indexJ.handlebars
+++ b/views/indexJ.handlebars
@@ -20,8 +20,13 @@
   
   <div id="tabs-3">
     <div id="tabs-3-cnt">
-    <p>Заказать</p>
-    <button id="close">Выйти в телеграм</button>
+    <p>Товары в корзине:</p>
+
+    <div class="in-basket" id="in-basket">
+
+    </div>
+
+    <button class="button-backTg" id="close">Подтвердить и выйти в телеграм</button>
     </div>
   </div>
 </div>
