--- a/views/layouts/DmainBB.handlebars
+++ b/views/layouts/DmainBB.handlebars
@@ -14,12 +14,12 @@
    
     <title>webAppbot</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shopBB.css"> 
+    <link rel="stylesheet" href="styles/DshopBB.css"> 
     
 </head>
  
 <body>
     {{{body}}}
-    <script src="distribute/appBB.js"></script> 
+    <script src="distribute/Dapp.js"></script> 
 </body>
 </html>
