--- a/views/layouts/mainre.handlebars
+++ b/views/layouts/mainre.handlebars
@@ -14,12 +14,12 @@
    
     <title>webAppbot</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shopFFF.css"> 
+    <link rel="stylesheet" href="styles/shopre.css">  
     
 </head>
  
 <body>
     {{{body}}}
-    <script src="distribute/appFFF.js"></script> 
+    <script src="distribute/appre.js"></script> 
 </body>
 </html>
