--- a/views/layouts/mainuy.handlebars
+++ b/views/layouts/mainuy.handlebars
@@ -20,6 +20,6 @@
  
 <body>
     {{{body}}}
-    <script src="distribute/appuy.js"></script> 
+    <script src="distribute/appAd.js"></script> 
 </body>
 </html>
