--- a/views/layouts/mainGF.handlebars
+++ b/views/layouts/mainGF.handlebars
@@ -14,12 +14,12 @@
    
     <title>webAppbot</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shopuy.css">  
+    <link rel="stylesheet" href="styles/shopGF.css">  
     
 </head>
  
 <body>
     {{{body}}}
-    <script src="distribute/appAd.js"></script> 
+    <script src="distribute/appGF.js"></script> 
 </body>
 </html>
