--- a/views/layouts/main_ccb.handlebars
+++ b/views/layouts/main_ccb.handlebars
@@ -14,12 +14,12 @@
    
     <title>webAppbot</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shop_oo.css">  
+    <link rel="stylesheet" href="styles/shop_yu.css">  
     
 </head>
  
 <body>
     {{{body}}}
-    <script src="distribute/app_oo.js"></script> 
+    <script src="distribute/app_yu.js"></script> 
 </body>
 </html>
