--- a/views/index_HI.handlebars
+++ b/views/index_HI.handlebars
@@ -20,7 +20,7 @@
   
   <div id="tabs-3">
     <div id="tabs-3-cnt">
-    <p>Товары в корзине:</p>
+    <p>Товары в корзине: <span id="total-summa" class="summa"></span></p>
     <button class="button-backTg" id="close">Подтвердить и выйти в телеграм</button>
 
     <div class="in-basket" id="in-basket">
