--- a/views/layouts/main_HI.handlebars
+++ b/views/layouts/main_HI.handlebars
@@ -14,12 +14,12 @@
    
     <title>webAppbot</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shop_KK.css">  
+    <link rel="stylesheet" href="styles/shop_HI.css">  
     
 </head>
  
 <body>
     {{{body}}}
-    <script src="distribute/app_KK.js"></script> 
+    <script src="distribute/app_HI.js"></script> 
 </body>
 </html>
