--- a/public/styles/shop_HI.css
+++ b/public/styles/shop_HI.css
@@ -176,15 +176,50 @@ body {
 
  .counter{
   margin: 10px 0;
-  width: 120px;
+  width: 150px;
   margin-left: 6px;
   display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: center;
+ 
+ }
+
+ .counter-verb {
+  display: flex;
+  flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
  }
+
+
+ 
+
+/* CSS */
+.submit-product {
+   width: 100%;
+  height: 40px;
+  margin-top: 10px;
+  background-image: linear-gradient(#0dccea, #0d70ea);
+  border: 0;
+  border-radius: 4px;
+  box-shadow: rgba(0, 0, 0, .3) 0 5px 15px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-family: Montserrat,sans-serif;
+  font-size: .9em;
+  padding: 10px 15px;
+  text-align: center;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
  .btn{
   width: 40px;
   height: 40px;
+  margin: 0 10px;
   border-radius: 50%;
   background-color: #d9d9d9;
   display: flex;
@@ -222,6 +257,11 @@ body {
   font-size: 20px;
   font-weight: 900;
   color: #202020;
+ }
+
+ .count input {
+  width: 30px;
+  font-size: 0.8em;
  }
 
  .from {
