--- a/views/layouts/main_GHI.handlebars
+++ b/views/layouts/main_GHI.handlebars
@@ -20,6 +20,6 @@
  
 <body>
     {{{body}}}
-    <script src="distribute/app_oopp.js"></script> 
+    <script src="distribute/app_Gg.js"></script> 
 </body>
 </html>
