--- a/views/layouts/main_yyy.handlebars
+++ b/views/layouts/main_yyy.handlebars
@@ -14,12 +14,12 @@
    
     <title>webAppbot</title>
     <link rel="stylesheet" href="styles/normalize.css"> 
-    <link rel="stylesheet" href="styles/shop_yyy.css">  
+    <link rel="stylesheet" href="styles/shop_www.css">  
     
 </head>
  
 <body>
     {{{body}}}
-    <script src="distribute/app_789.js"></script> 
+    <script src="distribute/app_www.js"></script> 
 </body>
 </html>
