--- a/views/layouts/main_yyy.handlebars
+++ b/views/layouts/main_yyy.handlebars
@@ -20,6 +20,6 @@
  
 <body>
     {{{body}}}
-    <script src="distribute/app_w5.js"></script> 
+    <script src="distribute/app_v5.js"></script> 
 </body>
 </html>
