--- a/views/layouts/basket.handlebars
+++ b/views/layouts/basket.handlebars
@@ -20,7 +20,7 @@
  
 <body>
     {{{body}}}
-    <script src="distribute/app_v5.js"></script>
+    <script src="distribute/app.js"></script>
     <script>
         
         async function getId() {
